2005-08-10  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/IMethodBody.cs
	  Mono.Cecil.Cil/ICilEmitter.cs
	  Mono.Cecil.Cil/ICilWorker.cs
	  Mono.Cecil.Implem/CilWorker.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Implem/MethodBody.cs
	  Mono.Cecil.Implem/CilEmitter.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs:
		Prepare the api for the cil emitting.

	* CodeGen/templates/Utilities.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/Utilities.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs:
		Fix the build on .net, i was using a sugar
		syntax for delegates that csc does not understand.
		Remove the coded index cache from the static class
		Utilities, and add one per row visitor.

	* Mono.Cecil/IMethodReturnType.cs
	  Mono.Cecil.Implem/MethodReturnType.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Make IMethodReturn type inherits IHasMarshalSpec so
		that users can read marshaling info for return types,
		and implement it.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Cecil now emits assemblies understood by the .net clr.

2005-08-09  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyKind.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Lots of little fixes. Now dumpbin is coherent
		compared with an assembly emitted with csc or mcs
		but still not yet compatible with .net.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix an array out of range while trying to read
		fixed arrays signatures

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataReader.cs